third_party/move/move-compiler-v2/tests/signed-int/valid/valid_ref_resource.exp
// -- Model dump before first bytecode pipeline
module 0x42::valid_ref_resource {
    use std::signer;
    struct S1 {
        x: u64,
        y: 0x1::i64::I64,
        z: 0x1::i128::I128,
    }
    private fun test_borrow1(a: 0x1::i64::I64): &0x1::i64::I64 {
        Borrow(Immutable)(a)
    }
    private fun test_borrow2(a: 0x1::i128::I128): &0x1::i128::I128 {
        Borrow(Immutable)(a)
    }
    private fun test_deref1(a: &0x1::i64::I64): 0x1::i64::I64 {
        Deref(a)
    }
    private fun test_deref2(a: &0x1::i128::I128): 0x1::i128::I128 {
        Deref(a)
    }
    private fun test_exist1(addr: address): 0x1::i64::I64 {
        if exists<S1>(addr) {
          {
            let s: &S1 = BorrowGlobal(Immutable)<S1>(addr);
            select valid_ref_resource::S1.y<&S1>(s)
          }
        } else {
          i64::pack(1)
        }
    }
    private fun test_exist2(addr: address): 0x1::i128::I128 {
        if exists<S1>(addr) {
          {
            let s: &S1 = BorrowGlobal(Immutable)<S1>(addr);
            select valid_ref_resource::S1.z<&S1>(s)
          }
        } else {
          i128::pack(1)
        }
    }
    private fun test_move_from(account: &signer,addr: address): 0x1::i64::I64 {
        {
          let s1: S1 = pack valid_ref_resource::S1(1, i64::pack(-1), i128::pack(-2));
          if exists<S1>(addr) {
            select valid_ref_resource::S1.y<S1>(MoveFrom<S1>(signer::address_of(account)))
          } else {
            select valid_ref_resource::S1.y<S1>(s1)
          }
        }
    }
    private fun test_move_to(account: &signer,addr: address) {
        {
          let s1: S1 = pack valid_ref_resource::S1(1, i64::pack(-1), i128::pack(-2));
          if Not(exists<S1>(addr)) {
            MoveTo<S1>(account, s1)
          } else {
            Tuple()
          }
        }
    }
} // end 0x42::valid_ref_resource

// -- Sourcified model before first bytecode pipeline
module 0x42::valid_ref_resource {
    use std::signer;
    struct S1 has copy, drop, key {
        x: u64,
        y: 0x1::i64::I64,
        z: 0x1::i128::I128,
    }
    fun test_borrow1(a: 0x1::i64::I64): &0x1::i64::I64 {
        &a
    }
    fun test_borrow2(a: 0x1::i128::I128): &0x1::i128::I128 {
        &a
    }
    fun test_deref1(a: &0x1::i64::I64): 0x1::i64::I64 {
        *a
    }
    fun test_deref2(a: &0x1::i128::I128): 0x1::i128::I128 {
        *a
    }
    fun test_exist1(addr: address): 0x1::i64::I64 {
        if (exists<S1>(addr)) {
            let s = borrow_global<S1>(addr);
            s.y
        } else 0x1::i64::pack(1)
    }
    fun test_exist2(addr: address): 0x1::i128::I128 {
        if (exists<S1>(addr)) {
            let s = borrow_global<S1>(addr);
            s.z
        } else 0x1::i128::pack(1u128)
    }
    fun test_move_from(account: &signer, addr: address): 0x1::i64::I64 {
        let s1 = S1{x: 1, y: 0x1::i64::pack(-1), z: 0x1::i128::pack(-2u128)};
        if (exists<S1>(addr)) move_from<S1>(0x1::signer::address_of(account)).y else s1.y
    }
    fun test_move_to(account: &signer, addr: address) {
        let s1 = S1{x: 1, y: 0x1::i64::pack(-1), z: 0x1::i128::pack(-2u128)};
        if (!exists<S1>(addr)) move_to<S1>(s1, account)
    }
}

============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun valid_ref_resource::test_borrow1($t0: 0x1::i64::I64): &0x1::i64::I64 {
     var $t1: &0x1::i64::I64
  0: $t1 := borrow_local($t0)
  1: return $t1
}


[variant baseline]
fun valid_ref_resource::test_borrow2($t0: 0x1::i128::I128): &0x1::i128::I128 {
     var $t1: &0x1::i128::I128
  0: $t1 := borrow_local($t0)
  1: return $t1
}


[variant baseline]
fun valid_ref_resource::test_deref1($t0: &0x1::i64::I64): 0x1::i64::I64 {
     var $t1: 0x1::i64::I64
  0: $t1 := read_ref($t0)
  1: return $t1
}


[variant baseline]
fun valid_ref_resource::test_deref2($t0: &0x1::i128::I128): 0x1::i128::I128 {
     var $t1: 0x1::i128::I128
  0: $t1 := read_ref($t0)
  1: return $t1
}


[variant baseline]
fun valid_ref_resource::test_exist1($t0: address): 0x1::i64::I64 {
     var $t1: 0x1::i64::I64
     var $t2: bool
     var $t3: &0x42::valid_ref_resource::S1
     var $t4: &0x1::i64::I64
     var $t5: u64
  0: $t2 := exists<0x42::valid_ref_resource::S1>($t0)
  1: if ($t2) goto 2 else goto 7
  2: label L0
  3: $t3 := borrow_global<0x42::valid_ref_resource::S1>($t0)
  4: $t4 := borrow_field<0x42::valid_ref_resource::S1>.y($t3)
  5: $t1 := read_ref($t4)
  6: goto 10
  7: label L1
  8: $t5 := 1
  9: $t1 := i64::pack($t5)
 10: label L2
 11: return $t1
}


[variant baseline]
fun valid_ref_resource::test_exist2($t0: address): 0x1::i128::I128 {
     var $t1: 0x1::i128::I128
     var $t2: bool
     var $t3: &0x42::valid_ref_resource::S1
     var $t4: &0x1::i128::I128
     var $t5: u128
  0: $t2 := exists<0x42::valid_ref_resource::S1>($t0)
  1: if ($t2) goto 2 else goto 7
  2: label L0
  3: $t3 := borrow_global<0x42::valid_ref_resource::S1>($t0)
  4: $t4 := borrow_field<0x42::valid_ref_resource::S1>.z($t3)
  5: $t1 := read_ref($t4)
  6: goto 10
  7: label L1
  8: $t5 := 1
  9: $t1 := i128::pack($t5)
 10: label L2
 11: return $t1
}


[variant baseline]
fun valid_ref_resource::test_move_from($t0: &signer, $t1: address): 0x1::i64::I64 {
     var $t2: 0x1::i64::I64
     var $t3: 0x42::valid_ref_resource::S1
     var $t4: u64
     var $t5: 0x1::i64::I64
     var $t6: u64
     var $t7: 0x1::i128::I128
     var $t8: u128
     var $t9: bool
     var $t10: 0x42::valid_ref_resource::S1
     var $t11: address
     var $t12: &0x42::valid_ref_resource::S1
     var $t13: &0x1::i64::I64
     var $t14: &0x42::valid_ref_resource::S1
     var $t15: &0x1::i64::I64
  0: $t4 := 1
  1: $t6 := 0
  2: $t5 := i64::pack($t6)
  3: $t8 := 0
  4: $t7 := i128::pack($t8)
  5: $t3 := pack 0x42::valid_ref_resource::S1($t4, $t5, $t7)
  6: $t9 := exists<0x42::valid_ref_resource::S1>($t1)
  7: if ($t9) goto 8 else goto 15
  8: label L0
  9: $t11 := signer::address_of($t0)
 10: $t10 := move_from<0x42::valid_ref_resource::S1>($t11)
 11: $t12 := borrow_local($t10)
 12: $t13 := borrow_field<0x42::valid_ref_resource::S1>.y($t12)
 13: $t2 := read_ref($t13)
 14: goto 19
 15: label L1
 16: $t14 := borrow_local($t3)
 17: $t15 := borrow_field<0x42::valid_ref_resource::S1>.y($t14)
 18: $t2 := read_ref($t15)
 19: label L2
 20: return $t2
}


[variant baseline]
fun valid_ref_resource::test_move_to($t0: &signer, $t1: address) {
     var $t2: 0x42::valid_ref_resource::S1
     var $t3: u64
     var $t4: 0x1::i64::I64
     var $t5: u64
     var $t6: 0x1::i128::I128
     var $t7: u128
     var $t8: bool
     var $t9: bool
     var $t10: &signer
  0: $t3 := 1
  1: $t5 := 0
  2: $t4 := i64::pack($t5)
  3: $t7 := 0
  4: $t6 := i128::pack($t7)
  5: $t2 := pack 0x42::valid_ref_resource::S1($t3, $t4, $t6)
  6: $t9 := exists<0x42::valid_ref_resource::S1>($t1)
  7: $t8 := !($t9)
  8: if ($t8) goto 9 else goto 13
  9: label L0
 10: $t10 := infer($t0)
 11: move_to<0x42::valid_ref_resource::S1>($t10, $t2)
 12: goto 14
 13: label L1
 14: label L2
 15: return ()
}


Diagnostics:
error: cannot return a reference derived from local `a` since it is not based on a parameter
  ┌─ tests/signed-int/valid/valid_ref_resource.move:7:9
  │
7 │         &a
  │         ^^
  │         │
  │         return attempted here
  │         local `a` previously borrowed here

error: cannot return a reference derived from local `a` since it is not based on a parameter
   ┌─ tests/signed-int/valid/valid_ref_resource.move:11:9
   │
11 │         &a
   │         ^^
   │         │
   │         return attempted here
   │         local `a` previously borrowed here
